--- a/public/index.html
+++ b/public/index.html
@@ -235,25 +235,51 @@
       <i class="fa fa-bars"></i>
     </div>
 
-    <!-- Navigation Links -->
-    <ul class="nav-links" style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0;">
-      <li style="padding: 10px;"><a href="/" style="text-decoration: none; color: wheat;">Home</a></li>
-      <li class="dropdown-container" style="position: relative; padding: 10px;">
-        <a href="#" style="text-decoration: none; color: wheat;">Destinations <i class="fa fa-caret-down"></i></a>
-        <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 140px; border-radius: 8px; top: 40px; left: 0;">
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/kenya" style="text-decoration: none; color: black;">🇰🇪 Kenya</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/tanzania" style="text-decoration: none; color: black;">🇹🇿 Tanzania</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/qatar" style="text-decoration: none; color: black;">🇶🇦 Qatar</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/dubai" style="text-decoration: none; color: black;">🇦🇪 Dubai</a></li>
-          <li style="padding: 8px 12px;"><a href="/egypt" style="text-decoration: none; color: black;">🇪🇬 Egypt</a></li>
-        </ul>
-      </li>
-      <li style="padding: 10px;"><a href="/about" style="text-decoration: none; color: wheat;">Who We Are</a></li>
-      <li style="padding: 10px;"><a href="/experiences" style="text-decoration: none; color: wheat;">Experiences</a></li>
-      <li style="padding: 10px;"><a href="/guides" style="text-decoration: none; color: wheat;">Guides</a></li>
-      <li style="padding: 10px;"><a href="#" style="text-decoration: none; color: wheat;"><i class="fa fa-phone" style="font-size: 20px;"></i></a></li>
-      <li style="padding: 10px;"><a href="/login" style="text-decoration: none; color: wheat;"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a></li>
+   <!-- Navigation Links -->
+<ul class="nav-links" style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0; font-family: 'Jost', sans-serif;">
+  <li style="padding: 10px;"><a href="/" style="text-decoration: none; color: wheat;">Home</a></li>
+  
+  <li class="dropdown-container" style="position: relative; padding: 10px;">
+    <a href="#" style="text-decoration: none; color: wheat;">Destinations <i class="fa fa-caret-down"></i></a>
+    <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 140px; border-radius: 8px; top: 40px; left: 0;">
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/kenya" style="text-decoration: none; color: black;">🇰🇪 Kenya</a></li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/tanzania" style="text-decoration: none; color: black;">🇹🇿 Tanzania</a></li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/qatar" style="text-decoration: none; color: black;">🇶🇦 Qatar</a></li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/dubai" style="text-decoration: none; color: black;">🇦🇪 Dubai</a></li>
+      <li style="padding: 8px 12px;"><a href="/egypt" style="text-decoration: none; color: black;">🇪🇬 Egypt</a></li>
     </ul>
+  </li>
+
+  <!-- Travel Info Dropdown -->
+  <li class="dropdown-container" style="position: relative; padding: 10px;">
+    <a href="#" style="text-decoration: none; color: wheat;">Travel Info <i class="fa fa-caret-down"></i></a>
+    <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 200px; border-radius: 8px; top: 40px; left: 0;">
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/book-with-confidence" style="text-decoration: none; color: black;">Book With Confidence</a></li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/why-book-with-us" style="text-decoration: none; color: black;">Why Book With Us</a></li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/booking-terms" style="text-decoration: none; color: black;">Booking Terms</a></li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/sustainability-policy" style="text-decoration: none; color: black;">Sustainability Policy</a></li>
+      <li style="padding: 8px 12px;"><a href="/about-us" style="text-decoration: none; color: black;">About Us</a></li>
+    </ul>
+  </li>
+
+  <li style="padding: 10px;"><a href="/about" style="text-decoration: none; color: wheat;">Who We Are</a></li>
+  <li style="padding: 10px;"><a href="/experiences" style="text-decoration: none; color: wheat;">Experiences</a></li>
+  <li style="padding: 10px;"><a href="/guides" style="text-decoration: none; color: wheat;">Guides</a></li>
+  <li style="padding: 10px;"><a href="#" style="text-decoration: none; color: wheat;"><i class="fa fa-phone" style="font-size: 20px;"></i></a></li>
+  <li style="padding: 10px;"><a href="/login" style="text-decoration: none; color: wheat;"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a></li>
+</ul>
+
+<script>
+  document.querySelectorAll('.dropdown-container').forEach(item => {
+    item.addEventListener('mouseenter', () => {
+      item.querySelector('.dropdown').style.display = 'block';
+    });
+    item.addEventListener('mouseleave', () => {
+      item.querySelector('.dropdown').style.display = 'none';
+    });
+  });
+</script>
+
   </div>
 </nav>
 
@@ -310,7 +336,7 @@
 
     <!-- Hero Content -->
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; width: 100%; max-width: 800px;">
-      <h1 style="font-size: 5vw; font-weight: 700; text-shadow: 2px 2px 5px rgba(0,0,0,0.5); margin: 0;">Escorted group tours & private trips</h1>
+      <h1 style="font-size: 5vw; font-weight: 700; text-shadow: 2px 2px 5px rgba(0,0,0,0.5); margin: 0;color: #D70654;">Escorted group tours & private trips</h1>
       <p style="font-size: 2vw; margin: 10px 0 30px;">Discover the best destinations and unforgettable experiences</p>
       
       <!-- Search Form -->
