--- a/public/book-with-confidence.html
+++ b/public/book-with-confidence.html
@@ -239,6 +239,49 @@
    <!-- Navigation Links -->
 <ul class="nav-links" style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0; font-family: 'Jost', sans-serif;">
   <li style="padding: 10px;"><a href="/" style="text-decoration: none; color: wheat;">Home</a></li>
+  <!-- Tour Info Dropdown -->
+<li class="dropdown-container" style="position: relative; padding: 10px;">
+    <a href="#" style="text-decoration: none; color: wheat;">Tours <i class="fa fa-caret-down"></i></a>
+    <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 250px; border-radius: 8px; top: 40px; left: 0;">
+  
+      <!-- Season Category -->
+      <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Season</li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/summer-tours" style="text-decoration: none; color: black;">Summer Tours</a>
+      </li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/winter-tours" style="text-decoration: none; color: black;">Winter Tours</a>
+      </li>
+  
+      <!-- Tour Types Category -->
+      <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Tour Types</li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/self-drive-tours" style="text-decoration: none; color: black;">Self Drive</a>
+      </li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/privately-guided-tours" style="text-decoration: none; color: black;">Privately Guided Tours</a>
+      </li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/guided-small-tours" style="text-decoration: none; color: black;">Guided Small Tours</a>
+      </li>
+  
+      <!-- Popular Tours Category -->
+      <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Popular Tours</li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/all-travel-styles" style="text-decoration: none; color: black;">All Travel Styles</a>
+      </li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/show-all-tours" style="text-decoration: none; color: black;">Show All Tours</a>
+      </li>
+      <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
+        <a href="/best-sellers" style="text-decoration: none; color: black;">Best Sellers</a>
+      </li>
+      <li style="padding: 8px 12px;">
+        <a href="/special-offers" style="text-decoration: none; color: black;">Special Offers</a>
+      </li>
+  
+    </ul>
+  </li>
   
   <li class="dropdown-container" style="position: relative; padding: 10px;">
     <a href="#" style="text-decoration: none; color: wheat;">Destinations <i class="fa fa-caret-down"></i></a>
@@ -250,6 +293,7 @@
       <li style="padding: 8px 12px;"><a href="/egypt" style="text-decoration: none; color: black;">🇪🇬 Egypt</a></li>
     </ul>
   </li>
+  
 
   <!-- Travel Info Dropdown -->
   <li class="dropdown-container" style="position: relative; padding: 10px;">
