--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         flex-wrap: wrap; /* Wrap content if needed */
       }
 
-      /* Navigation bar adjustments */
+      /* Navigation bar adjustme nts */
       .nav-bar {
         padding: 10px;
       }
@@ -309,7 +309,7 @@
   <li style="padding: 10px;"><a href="/about" style="text-decoration: none; color: wheat;">Who We Are</a></li>
   <li style="padding: 10px;"><a href="/experiences" style="text-decoration: none; color: wheat;">Experiences</a></li>
   <li style="padding: 10px;"><a href="/guides" style="text-decoration: none; color: wheat;">Guides</a></li>
-  <li style="padding: 10px;"><a href="#" style="text-decoration: none; color: wheat;"><i class="fa fa-phone" style="font-size: 20px;"></i></a></li>
+  <li style="padding: 10px;"><a href="/contact" style="text-decoration: none; color: wheat;"><i class="fa fa-phone" style="font-size: 20px;"></i></a></li>
   <li style="padding: 10px;"><a href="/login" style="text-decoration: none; color: wheat;"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a></li>
 </ul>
 
