--- a/public/index.html
+++ b/public/index.html
@@ -242,6 +242,7 @@
   });
 </script>
 
+<!-- Updated Riq Responsive Navigation -->
 <nav style="background: #222; padding: 10px 20px; color: white; position: relative;">
   <div style="display: flex; justify-content: space-between; align-items: center;">
 
@@ -252,20 +253,21 @@
       </a>
     </div>
 
-    <!-- Hamburger Menu for smaller screens -->
-    <div class="menu-toggle" onclick="toggleMenu()" style="display: none; font-size: 24px; cursor: pointer;">
+    <!-- Hamburger Menu -->
+    <div class="menu-toggle" onclick="toggleMenu()" style="font-size: 24px; cursor: pointer; display: none; color: white;">
       <i class="fa fa-bars"></i>
     </div>
 
     <!-- Navigation Links -->
     <ul class="nav-links" style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0; font-family: 'Jost', sans-serif;">
       <li style="padding: 10px;"><a href="/" style="text-decoration: none; color: wheat;">Home</a></li>
+      
+      <!-- Destinations Link -->
+      <li style="padding: 10px;"><a href="/destinations" style="text-decoration: none; color: wheat;">Destinations</a></li>
 
-      <!-- Tour Info Dropdown -->
       <li class="dropdown-container" style="position: relative; padding: 10px;">
         <a href="#" style="text-decoration: none; color: wheat;">Tours <i class="fa fa-caret-down"></i></a>
         <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 250px; border-radius: 8px; top: 40px; left: 0;">
-          <!-- Season Category -->
           <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Season</li>
           <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
             <a href="/summer-tours" style="text-decoration: none; color: black;">Summer Tours</a>
@@ -273,8 +275,6 @@
           <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
             <a href="/winter-tours" style="text-decoration: none; color: black;">Winter Tours</a>
           </li>
-
-          <!-- Tour Types Category -->
           <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Tour Types</li>
           <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
             <a href="/self-drive-tours" style="text-decoration: none; color: black;">Self Drive</a>
@@ -285,8 +285,6 @@
           <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
             <a href="/guided-small-tours" style="text-decoration: none; color: black;">Guided Small Tours</a>
           </li>
-
-          <!-- Popular Tours Category -->
           <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Popular Tours</li>
           <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
             <a href="/all-travel-styles" style="text-decoration: none; color: black;">All Travel Styles</a>
@@ -303,30 +301,7 @@
         </ul>
       </li>
 
-      <!-- Destinations Dropdown -->
-      <li class="dropdown-container" style="position: relative; padding: 10px;">
-        <a href="#" style="text-decoration: none; color: wheat;">Destinations <i class="fa fa-caret-down"></i></a>
-        <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 140px; border-radius: 8px; top: 40px; left: 0;">
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/kenya" style="text-decoration: none; color: black;">🇰🇪 Kenya</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/tanzania" style="text-decoration: none; color: black;">🇹🇿 Tanzania</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/qatar" style="text-decoration: none; color: black;">🇶🇦 Qatar</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/dubai" style="text-decoration: none; color: black;">🇦🇪 Dubai</a></li>
-          <li style="padding: 8px 12px;"><a href="/egypt" style="text-decoration: none; color: black;">🇪🇬 Egypt</a></li>
-        </ul>
-      </li>
-
-      <!-- Travel Info Dropdown -->
-      <li class="dropdown-container" style="position: relative; padding: 10px;">
-        <a href="#" style="text-decoration: none; color: wheat;">Travel Info <i class="fa fa-caret-down"></i></a>
-        <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 200px; border-radius: 8px; top: 40px; left: 0;">
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/book-with-confidence" style="text-decoration: none; color: black;">Book With Confidence</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/why-book-with-us" style="text-decoration: none; color: black;">Why Book With Us</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/booking-terms" style="text-decoration: none; color: black;">Booking Terms</a></li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;"><a href="/sustainability-policy" style="text-decoration: none; color: black;">Sustainability Policy</a></li>
-          <li style="padding: 8px 12px;"><a href="/about-us" style="text-decoration: none; color: black;">About Us</a></li>
-        </ul>
-      </li>
-
+      <!-- Additional List Items -->
       <li style="padding: 10px;"><a href="/about" style="text-decoration: none; color: wheat;">Who We Are</a></li>
       <li style="padding: 10px;"><a href="/experiences" style="text-decoration: none; color: wheat;">Experiences</a></li>
       <li style="padding: 10px;"><a href="/guides" style="text-decoration: none; color: wheat;">Guides</a></li>
@@ -338,15 +313,6 @@
 </nav>
 
 <script>
-  document.querySelectorAll('.dropdown-container').forEach(item => {
-    item.addEventListener('mouseenter', () => {
-      item.querySelector('.dropdown').style.display = 'block';
-    });
-    item.addEventListener('mouseleave', () => {
-      item.querySelector('.dropdown').style.display = 'none';
-    });
-  });
-
   function toggleMenu() {
     const navLinks = document.querySelector(".nav-links");
     if (navLinks.style.display === "flex") {
@@ -363,34 +329,30 @@
     }
   }
 
+  document.querySelectorAll(".dropdown-container").forEach((item) => {
+    item.addEventListener("click", function (event) {
+      event.stopPropagation();
+      let dropdown = this.querySelector(".dropdown");
+      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    });
+  });
+
   window.addEventListener("resize", function () {
     if (window.innerWidth > 768) {
       document.querySelector(".nav-links").style.display = "flex";
+      document.querySelector(".menu-toggle").style.display = "none";
     } else {
       document.querySelector(".nav-links").style.display = "none";
+      document.querySelector(".menu-toggle").style.display = "block";
     }
   });
+
+  document.addEventListener("click", function (event) {
+    document.querySelectorAll(".dropdown").forEach((dropdown) => {
+      dropdown.style.display = "none";
+    });
+  });
 </script>
-
-<style>
-  /* Media Query for Mobile Devices */
-  @media (max-width: 768px) {
-    .nav-links {
-      display: none;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      width: 100%;
-      background: #222;
-      flex-direction: column;
-      padding: 15px;
-    }
-
-    .menu-toggle {
-      display: block;
-    }
-  }
-</style>
 
 
 
