--- a/public/index.html
+++ b/public/index.html
@@ -254,59 +254,13 @@
     </div>
 
     <!-- Hamburger Menu -->
-    <div class="menu-toggle" onclick="toggleMenu()" style="font-size: 24px; cursor: pointer; display: none; color: white;">
+    <div class="menu-toggle" onclick="toggleMenu()" style="display: none; font-size: 24px; cursor: pointer;">
       <i class="fa fa-bars"></i>
     </div>
 
     <!-- Navigation Links -->
     <ul class="nav-links" style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0; font-family: 'Jost', sans-serif;">
-      <li style="padding: 10px;"><a href="/" style="text-decoration: none; color: wheat;">Home</a></li>
-      
-      <!-- Destinations Link -->
-      <li style="padding: 10px;"><a href="/destinations" style="text-decoration: none; color: wheat;">Destinations</a></li>
-
-      <li class="dropdown-container" style="position: relative; padding: 10px;">
-        <a href="#" style="text-decoration: none; color: wheat;">Tours <i class="fa fa-caret-down"></i></a>
-        <ul class="dropdown" style="display: none; position: absolute; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.15); padding: 10px; list-style: none; margin: 0; z-index: 10; width: 250px; border-radius: 8px; top: 40px; left: 0;">
-          <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Season</li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/summer-tours" style="text-decoration: none; color: black;">Summer Tours</a>
-          </li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/winter-tours" style="text-decoration: none; color: black;">Winter Tours</a>
-          </li>
-          <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Tour Types</li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/self-drive-tours" style="text-decoration: none; color: black;">Self Drive</a>
-          </li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/privately-guided-tours" style="text-decoration: none; color: black;">Privately Guided Tours</a>
-          </li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/guided-small-tours" style="text-decoration: none; color: black;">Guided Small Tours</a>
-          </li>
-          <li style="padding: 10px 12px; font-weight: bold; color: #333; background-color: #f4f4f4; border-bottom: 1px solid #ddd; text-transform: uppercase; font-size: 12px;">Popular Tours</li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/all-travel-styles" style="text-decoration: none; color: black;">All Travel Styles</a>
-          </li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/show-all-tours" style="text-decoration: none; color: black;">Show All Tours</a>
-          </li>
-          <li style="padding: 8px 12px; border-bottom: 1px solid #ddd;">
-            <a href="/best-sellers" style="text-decoration: none; color: black;">Best Sellers</a>
-          </li>
-          <li style="padding: 8px 12px;">
-            <a href="/special-offers" style="text-decoration: none; color: black;">Special Offers</a>
-          </li>
-        </ul>
-      </li>
-
-      <!-- Additional List Items -->
-      <li style="padding: 10px;"><a href="/about" style="text-decoration: none; color: wheat;">Who We Are</a></li>
-      <li style="padding: 10px;"><a href="/experiences" style="text-decoration: none; color: wheat;">Experiences</a></li>
-      <li style="padding: 10px;"><a href="/guides" style="text-decoration: none; color: wheat;">Guides</a></li>
-      <li style="padding: 10px;"><a href="/contact" style="text-decoration: none; color: wheat;"><i class="fa fa-phone" style="font-size: 20px;"></i></a></li>
-      <li style="padding: 10px;"><a href="/login" style="text-decoration: none; color: wheat;"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a></li>
+      <!-- Navigation items go here -->
     </ul>
 
   </div>
@@ -329,29 +283,29 @@
     }
   }
 
-  document.querySelectorAll(".dropdown-container").forEach((item) => {
-    item.addEventListener("click", function (event) {
-      event.stopPropagation();
-      let dropdown = this.querySelector(".dropdown");
-      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-    });
-  });
-
   window.addEventListener("resize", function () {
     if (window.innerWidth > 768) {
       document.querySelector(".nav-links").style.display = "flex";
-      document.querySelector(".menu-toggle").style.display = "none";
+      document.querySelector(".menu-toggle").style.display = "none"; // Hide hamburger icon on larger screens
     } else {
-      document.querySelector(".nav-links").style.display = "none";
-      document.querySelector(".menu-toggle").style.display = "block";
+      document.querySelector(".nav-links").style.display = "none"; // Hide nav links on mobile by default
+      document.querySelector(".menu-toggle").style.display = "block"; // Show hamburger icon on mobile
     }
   });
 
-  document.addEventListener("click", function (event) {
-    document.querySelectorAll(".dropdown").forEach((dropdown) => {
-      dropdown.style.display = "none";
-    });
-  });
+  // Add the following CSS
+  const style = document.createElement('style');
+  style.innerHTML = `
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block !important; /* Make sure it's visible on smaller screens */
+      }
+      .nav-links {
+        display: none; /* Hide navigation links by default */
+      }
+    }
+  `;
+  document.head.appendChild(style);
 </script>
 
 
