Code modified on experiences.html

--- a/public/guides.html
+++ b/public/guides.html
@@ -465,7 +465,7 @@
 
   <!-- Introduction Section -->
   <div class="section">
-    <h1>Are you new to On The Go Tours?</h1>
+    <h1>Are you new to Riq2Link Tours and Adventures?</h1>
     <p>
       Welcome! We are a travel tour operator specializing in small group tours to more than 55 destinations around the world. Whether you dream of riding a camel at Egypt's Pyramids of Giza, tracking tigers in India's national parks, or exploring ancient Kyoto in Japan, you're in the right place!
     </p>
@@ -526,19 +526,19 @@
         </p>
       </div>
       <div class="card">
-        <img src="images/nairobi.jpg" alt="Which type of tour is best for you?">
+        <img src="images/h1.jpg" alt="Which type of tour is best for you?">
         <p>
           Are you deciding between group and private tours? Compare options to decide the best tour type for you.
         </p>
       </div>
       <div class="card">
-        <img src="images/nairobi.jpg" alt="Trip Themes">
+        <img src="images/h2.jpg" alt="Trip Themes">
         <p>
           Interested in adventure, cultural, or beach trips? Discover your perfect theme with tips for all travelers.
         </p>
       </div>
       <div class="card">
-        <img src="images/nairobi.jpg" alt="Our Destinations">
+        <img src="images/h1.jpg" alt="Our Destinations">
         <p>
           Explore over 55 destinations, from Africa to Asia, with helpful guides for each.
         </p>
@@ -557,13 +557,13 @@
         </p>
       </div>
       <div class="card">
-        <img src="images/nairobi.jpg" alt="Travel Essentials">
+        <img src="images/h1.jpg" alt="Travel Essentials">
         <p>
           Know what to pack with travel essentials designed for comfort and convenience.
         </p>
       </div>
       <div class="card">
-        <img src="images/nairobi.jpg" alt="Confidence-building">
+        <img src="images/h2.jpg" alt="Confidence-building">
         <p>
           Group tours are great for first-time travelers, building confidence while meeting people.
         </p>
@@ -584,30 +584,43 @@
         <p>Discover vibrant cultures, breathtaking landscapes, and majestic wildlife in India.</p>
       </div>
       <div class="card">
-        <img src="images/nairobi.jpg" alt="Japan">
+        <img src="images/h1.jpg" alt="Japan">
         <p>Experience the harmony of tradition and modernity in the land of the rising sun, Japan.</p>
       </div>
     </div>
   </div>
 
   <!-- Best-Selling Tours Section -->
-  <div id="best-selling-tours" class="section">
-    <h2>Best-Selling Tours</h2>
-    <div class="grid">
-      <div class="card">
-        <img src="images/nairobi.jpg" alt="Morocco Highlights">
-        <p>Morocco Highlights: From bustling Marrakech to the serene Sahara Desert.</p>
-      </div>
-      <div class="card">
-        <img src="images/nairobi.jpg" alt="Italy Escape">
-        <p>Italy Escape: Explore Rome, Venice, and Tuscany with culinary delights.</p>
-      </div>
-      <div class="card">
-        <img src="images/nairobi.jpg" alt="Thailand Adventure">
-        <p>Thailand Adventure: Discover temples, beaches, and delicious street food.</p>
-      </div>
+<div id="best-selling-tours" class="section">
+  <h2>Best-Selling East African Tours</h2>
+  <div class="grid">
+    <div class="card">
+      <img src="images/h1.jpg" alt="Kenya Safari">
+      <p>Kenya Safari: Experience the thrill of a safari in Maasai Mara and Amboseli.</p>
+    </div>
+    <div class="card">
+      <img src="images/h2.jpg" alt="Tanzania Safari">
+      <p>Tanzania Safari: Explore Serengeti and Ngorongoro Crater for a wildlife adventure.</p>
+    </div>
+    <div class="card">
+      <img src="images/h3.jpg" alt="Uganda Gorillas">
+      <p>Uganda Gorillas: Trek through Bwindi Impenetrable Forest to see mountain gorillas.</p>
+    </div>
+    <div class="card">
+      <img src="images/h3.jpg" alt="Rwanda Gorillas">
+      <p>Rwanda Gorillas: Hike through Volcanoes National Park for an unforgettable gorilla trek.</p>
+    </div>
+    <div class="card">
+      <img src="images/h2.jpg" alt="Zanzibar Beach">
+      <p>Zanzibar Beach: Relax on the white sandy beaches and explore Stone Town's culture.</p>
+    </div>
+    <div class="card">
+      <img src="images/h1.jpg" alt="Ethiopia Historic Tour">
+      <p>Ethiopia Historic Tour: Discover ancient ruins and UNESCO World Heritage sites in Lalibela.</p>
     </div>
   </div>
+</div>
+
 
 </body>
 </html>
