Code modified on natural wonders

--- a/public/guided-small-tours.html
+++ b/public/guided-small-tours.html
@@ -59,14 +59,17 @@
                     <li>Chase the Northern Lights with an expert guide</li>
                 </ul>
             </div>
-            <div style="background: white; padding: 10px; max-width: 250px; text-align: left; border: 1px solid #ccc;">
-                <img src="images/add5.jpg" alt="Natural Wonders of Iceland" style="width: 100%;">
-                <span style="background: red; color: white; padding: 5px; display: inline-block;">BEST SELLER</span>
-                <h4>Natural Wonders of Iceland</h4>
-                <p>10 days / 9 nights</p>
-                <p>Price: <del>5,000 EUR</del> <strong>4,694 EUR</strong></p>
-                <button style="background: #007BFF; color: white; padding: 10px; border: none; cursor: pointer;">View Map</button>
-            </div>
+            <a href="/Natural-Wonders-of-Iceland" style="text-decoration: none; color: inherit;">
+                <div style="background: white; padding: 10px; max-width: 250px; text-align: left; border: 1px solid #ccc; cursor: pointer;">
+                    <img src="images/add5.jpg" alt="Natural Wonders of Iceland" style="width: 100%;">
+                    <span style="background: red; color: white; padding: 5px; display: inline-block;">BEST SELLER</span>
+                    <h4>Natural Wonders of Iceland</h4>
+                    <p>10 days / 9 nights</p>
+                    <p>Price: <del>5,000 EUR</del> <strong>4,694 EUR</strong></p>
+                    <button style="background: #007BFF; color: white; padding: 10px; border: none; cursor: pointer;">View Map</button>
+                </div>
+            </a>
+            
             <div style="background: white; padding: 10px; max-width: 250px; text-align: left; border: 1px solid #ccc;">
                 <img src="images/add3.jpg" alt="Highlights of the Ring Road" style="width: 100%;">
                 <span style="background: red; color: white; padding: 5px; display: inline-block;">BEST SELLER</span>
